# council-agentflow

./: .gitignore  AGENTS.md  LICENSE  README.md  council-agentflow-dev.config.workflow.yaml  council-agentflow-dev.jobs.yaml  example.config.workflow.yaml  example.jobs.yaml  main.py  pyproject.toml
agentflow_core/: __init__.py  cli.py  config.py  errors.py  json_stream.py  logger.py  opencode_runner.py  prompts.py  session_store.py  workflow.py  workflow_constants.py  workflow_cycle_runner.py  workflow_human_review.py  workflow_io.py  workflow_runner.py  workflow_steps.py
docs/: artifacts-and-troubleshooting.md  autonomy-decision.md  configuration.md  workflow.md
docs/diagrams/: tool-nesting-relationship.mmd  workflow.mmd
prompts/cn/implementation/: autonomy-decision.md  loop-detector.md  reviewer-requirements.md
prompts/cn/planning/: pack.yaml  review-decision.md  reviewer-completeness.md  reviewer-risk.md
prompts/en/implementation/: autonomy-decision.md  execution.md  loop-detector.md  review-decision.md
prompts/en/planning/: autonomy-decision.md  reviewer-completeness.md
prompts/implementation/: execution.md  pack.yaml  review-decision.md  reviewer-quality.md  reviewer-requirements.md
prompts/planning/: autonomy-decision.md  execution.md  loop-detector.md  review-decision.md  reviewer-risk.md
tests/: test_config.py  test_workflow_io.py  test_workflow_steps_helpers.py  test_workflow_steps_validation.py
