[project]
name = "council-agentflow"
version = "0.1.0"
description = "A YAML-driven CLI for governed, iterative multi-agent execution workflows."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Sheng, Li" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.urls]
Repository = "https://github.com/LuWangStudio/council-agentflow"
Issues = "https://github.com/LuWangStudio/council-agentflow/issues"
Documentation = "https://github.com/LuWangStudio/council-agentflow#readme"

[project.scripts]
agentflow = "agentflow_core.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentflow_core*"]
